--- a/Proyecto_blogViajes/index.html
+++ b/Proyecto_blogViajes/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <title>Vite + React</title>
+    <title>Blog de Viajes</title>
   </head>
   <body>
     <div id="root"></div>
